[gd_scene load_steps=6 format=3 uid="uid://dh4m0nkbv01n0"]

[ext_resource type="Script" path="res://scripts/Load_data.gd" id="1_b70b7"]
[ext_resource type="FontFile" uid="uid://p63ukbvo7s51" path="res://assets/Fonts/DeterminationSansWebRegular-369X.ttf" id="3_osrlq"]
[ext_resource type="Texture2D" uid="uid://3s12cr8dkw4m" path="res://assets/Menu Textures/Load.png" id="4_bi4ok"]
[ext_resource type="Texture2D" uid="uid://chg2g33ap3gki" path="res://assets/Menu Textures/Load_blur.png" id="5_re5te"]
[ext_resource type="AudioStream" uid="uid://c4wmkmc5lp87q" path="res://assets/snd-hurt1-101soundboards.mp3" id="6_kclf0"]

[node name="load_save" type="Node2D"]
script = ExtResource("1_b70b7")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = 344.0
offset_top = 176.0
offset_right = 817.0
offset_bottom = 559.0
color = Color(0, 0, 0, 1)

[node name="Input" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 452.0
offset_top = 284.0
offset_right = 706.0
offset_bottom = 477.0

[node name="LineEdit" type="LineEdit" parent="Input"]
layout_mode = 0
offset_left = 2.0
offset_top = 18.0
offset_right = 250.0
offset_bottom = 65.0
theme_override_fonts/font = ExtResource("3_osrlq")
theme_override_font_sizes/font_size = 34
placeholder_text = " username"
max_length = 12

[node name="Load_button" type="TextureButton" parent="Input"]
layout_mode = 0
offset_left = 41.0
offset_top = 98.0
offset_right = 215.0
offset_bottom = 144.0
texture_normal = ExtResource("4_bi4ok")
texture_pressed = ExtResource("5_re5te")

[node name="Error_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_kclf0")

[connection signal="tree_entered" from="." to="." method="_on_tree_entered"]
[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="Input/Load_button" to="." method="_on_load_pressed"]
